# MicrosoftGraphRAG

./: .gitignore  .pre-commit-config.yaml  README.md  aa.txt  compose-backend-dev.yml  compose-precommit.yml  custom.sh  docker-compose.yml  makefile  sample
.devcontainer/: devcontainer.json
backend/: .dockerignore  .env  .pre-commit-config.yaml  Dockerfile  README.md  config.py  customloader.py  main.py  pyproject.toml  requests.http  test.py
docke-pre-commit/: Dockerfile-PreCommit  pre-commit-entry.sh  run-pre-commit.sh
